Fixed hitbox problem, added only one card visible functionality

--- a/styles.css
+++ b/styles.css
@@ -181,6 +181,7 @@ main {
     padding: 20px;
     border-radius: 50px;
     background-color: white;
+    position: relative;
 }
 
 .second__pane__cards:hover{
@@ -205,7 +206,18 @@ main {
 
 .card__paragraph {
     line-height: 1.5;
-    display: none;
+    transition: all 10s ease-in;
+
+}
+
+.clickbox {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: 10;
+
 }
 
 @media (max-width: 480px) {
